# ifb

./: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: 00_foundations.md  01_discrete_phase_space.md  02_channel_system_v0.2.md  03_muonium_cloud_experiment_v0.1.md  04_simulation_design.md  TREE.md  WHY.md  cloud_debug_patch.md  irrepnet_cursor_briefing.md  irrepnet_v0.2_spec_unified.md  muonium.md  spec_v0.1_compact.md  spec_v0.2_channels.md  spec_v0.2_clarifications.md
examples/: chain_momentum_v01.yaml  cloud_v01.yaml  triangle_loop_v01.yaml  two_path_v01.yaml
newdocs/: 00_foundations_trit.md  01_sign_dynamics.md  02_channel_system_v0.3.md  03_muonium_cloud_experiment_v0.2_trit.md  04_simulation_design_trit.md  TREE_trit.md  WHY_trit.md
notebooks/: understanding_the_cloud.ipynb
scripts/: animate_counts.py  profile_mps.py  run_demo.py  scan_gauge_phase.py
src/irrepnet/: __init__.py  loader.py  measure.py  sim.py
tests/: test_import.py
